feat: P3.3 pluggable captcha verifier with tencent cloud support
- New captcha package with clean abstraction:
  - CaptchaVerifier interface (throws ValidationException on failure)
  - CaptchaContext record carrying both kaptcha and tencent fields
  - KaptchaVerifier (default): reads expected text from Redis, case-insensitive compare
  - TencentCaptchaVerifier: calls DescribeCaptchaResult with TC3-HMAC-SHA256
    signing (no SDK dependency); activates on nowCoder.captcha.provider=tencent
    and requires secret-id/secret-key/captcha-app-id/app-secret-key in env
  - CaptchaProperties @ConfigurationProperties enabled from main class

- LoginRequest gains optional tencent fields (captchaTicket, captchaRandstr)
  alongside the kaptcha ones; frontend picks which to populate based on provider

- AuthController now injects CaptchaVerifier instead of doing Redis comparison
  inline; IP resolved from X-Forwarded-For / X-Real-IP / remoteAddr for tencent

- application.yaml adds nowCoder.captcha.* section with kaptcha as default;
  tencent credentials read from TENCENT_* env vars when enabled

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>